<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:orderInCategory="1"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_orders"
            android:orderInCategory="2"
            android:title="@string/menu_my_orders" />
        <item
            android:id="@+id/nav_contact_us"
            android:orderInCategory="4"
            android:title="@string/menu_contact_us" />
        <item
            android:id="@+id/nav_feedback"
            android:orderInCategory="5"
            android:title="@string/menu_feedback" />
    </group>
</menu>