<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    tools:context=".ui.cart.CartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/label_delivery_charge_applicable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/activity_margin"
            android:gravity="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/prompt_delivery_charge" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_item_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/total_amount_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_delivery_charge_applicable"
            tools:itemCount="2"
            tools:listitem="@layout/item_cart" />

        <TextView
            android:id="@+id/total_amount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/prompt_total_amount"
            android:textColor="@color/blue_grey_700"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/total_cart_amount"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Total amount" />

        <TextView
            android:id="@+id/label_total_cart_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin"
            android:text="@string/label_item_cost"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/total_cart_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/total_cart_amount" />

        <TextView
            android:id="@+id/total_cart_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginBottom="2dp"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/blue_grey_700"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/delivery_charge"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="0" />

        <TextView
            android:id="@+id/label_delivery_charge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin"
            android:text="@string/label_delivery_charge"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/delivery_charge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/delivery_charge" />

        <TextView
            android:id="@+id/delivery_charge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/blue_grey_700"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/total_amount"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="0" />

        <TextView
            android:id="@+id/label_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin"
            android:text="@string/label_total"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/total_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/total_amount" />

        <TextView
            android:id="@+id/total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/activity_margin"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/continue_to_place_order"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Rs: 243" />

        <Button
            android:id="@+id/continue_to_place_order"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/action_continue"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>